# beginners-pytorch-deep-learning

./: LICENSE  README.md  environment.yml  requirements.txt  requirements_cuda_available.txt  train.py
chapter2/: Chapter 2.ipynb  download.py  images.csv
chapter3/: Chapter 3.ipynb
chapter4/: Chapter 4.ipynb
chapter5/: Chapter 5.ipynb
chapter6/: Chapter 6.ipynb
chapter7/: Chapter_7_5_Quantizing_Models.ipynb  good_random.py  tensorboard-example.py  tensorboard.py
chapter7/flame_graphs/: bad_random.py  create_flame_graph_bad_random.sh  create_flame_graph_good_random.sh  good_random.py
chapter8/: CMakeLists.txt  load-cnn.cpp  server.py
chapter8/catfish/: Dockerfile  catfish_model.py  catfish_server.py  get-prediction.sh  run-flask-server.sh  run-model-service.sh  run-waitress-server.sh
chapter8/catfish_docker_cloud/: Dockerfile  catfish_server.py  run-docker.sh  run-model-service.sh
chapter8/catfish_docker_local/: Dockerfile  catfish_model.py  catfish_server.py  get-prediction.sh  run-docker.sh
chapter8/libtorch/hello/: CMakeLists.txt  hello.cpp
chapter8/libtorch/load-cnn/: CMakeLists.txt  cnnnet.py  load-cnn.cpp
chapter9/: Chapter9.5.ipynb  Fast_bert_.ipynb  Image_Self_Supervison.ipynb  cam.ipynb  fastai.ipynb
